# Sniper

./: .env  .env.example  .gitignore  Cargo.toml  README.md  README_NEW.md  \  config.json  docker-compose.yml
.github/workflows/: Tests.yml  build.yml  ci.yml  rust.yml
.sqlx/: query-3bd0990f1d361ba7eb45db48207975baa14979882daf5e7c4f099f29007db0fc.json  query-561ae18792e8634a10bfea3b1e4e23b97f69731ee9c4bdeb144d9d1b6cc28fed.json  query-5cb4d9ec55d9f3c84176455881194c9e14d9a3c6a542de52d94dbef90f0d9719.json
historical_data/: data_receiver.py  market_data.csv
migrations/: 20251121152815_create_schema.sql
src/: auth.rs  backtesting.rs  buffer.rs  config.rs  config.toml  data.rs  data_manager.rs  db.rs  engine.rs  error.rs  execution.rs  indicator.rs  indicators.rs  lib.rs  main.rs  market_stream.rs  mod.rs  orderbook.rs  position_manager.rs  rest_client.rs  risk_manager.rs  sign.rs  signal.rs  store.rs  strategy.rs  test.rs  trading_engine.rs  utils.rs  websocket.rs  ws_stream.rs
src/config/: config.toml  mod.rs
src/data_handling/: mod.rs
src/exchange/: auth.rs  binance_auth.rs  config.rs  kucoin_auth.rs  mod.rs
src/execution/: mod.rs
src/market_stream/: mod.rs
src/models/: market.rs  order.rs  position.rs
src/risk_manager/: mod.rs
src/strategy/: grid_strategy.rs  market_making.rs  mod.rs  signal_processing.rs  trade_strategy.rs  trading_strategy.rs
src/tests/: test.rs
src/websocket/: binance_ws.rs  kucoin_ws.rs  mod.rs  ws_client.rs
