[package]
name = "sniper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.0", features = ["full"]}
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
log = "0.4.21"
base64 = "0.21"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15.0"
ratatui = "0.29.0"
rusqlite = "0.37.0"
crossterm = "0.29.0"
clap = {version = "4.5.47", features = ["derive"]}
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
hex = "0.4.3"
env_logger = "0.10.0"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
