[package]
name = "sniper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20"
ta = "0.5"
anyhow = "1.0"
rust_decimal = "1.33"
url = "2.4"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.23", features = ["json"] }
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
